Fix phone number on mobile devices and amend capitalization

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -38,6 +38,7 @@
   }
 
   &__sub-grid--single-col {
+    grid-template-columns: 1fr 1fr;
     @include govuk-media-query($from: desktop) {
       grid-template-columns: 1fr;
     }
